--- a/Proyecto/Css/zombie.css
+++ b/Proyecto/Css/zombie.css
@@ -2,7 +2,7 @@
     font-family: 'minecraft';
     font-style: normal;
     font-weight: normal;
-    src: url("./fuente/Minecrafter.Reg.ttf") format('truetype');
+    src: url("/Proyecto/fuente/Minecrafter.Reg.ttf") format('truetype');
     }
 
 *{
@@ -12,7 +12,7 @@
 }
 
 body{
-    background-image: url(./imagenes/minecraft.jpeg);
+    background-image: url(/Proyecto/imagenes/minecraft.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -52,6 +52,7 @@ display:flex ;
 list-style: none;
 text-align: center;
 width: fit-content;
+position: static;
 
 }
 .item{
@@ -87,17 +88,9 @@ a{
     height: fit-content;
     justify-content: flex-end;
     font-family: 'minecraft';
-    
 }
 
-.contenido2{
-    background-color: rgba(253, 253, 150, 0.55);
-    backdrop-filter: blur(4px);
-    display: flex;
-    height: fit-content;
-    justify-content: flex-end;
-    font-family: 'minecraft';
-}
+
 
 .imagen{
     height: 16vw;
@@ -112,31 +105,32 @@ a{
 
 .imagen3{
     height: 16vw;
-    width: 17vw;
+    width: 16vw;
+}
+
+.imagen4{
+    height: 16vw;
+    width: 16vw;
+}
+
+.imagen5{
+    height: 16vw;
+    width: 16vw;
+}
+
+.imagen6{
+    height: 16vw;
+    width: 16vw;
 }
 
 .texto{
     display: flex;
     justify-content: center;
     align-items: center;
-    width:calc(80vw - 10vw) ;
+    width:calc(84vw - 10vw) ;
     border: 2px solid;
     font-size: x-large;
     text-align: center;
-    line-height: 40px;
-    letter-spacing: 2px;
-}
-
-.texto2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width:calc(80vw - 10vw) ;
-    border: 2px solid;
-    font-size: large;
-    text-align: center;
-    line-height: 40px;
-    letter-spacing: 2px;
 }
 
 .buscar{
@@ -150,13 +144,12 @@ a{
 
 @media (max-width:480px){
     body{
-        background-size: 100vh;
+        overflow-x: hidden;
     }
-    
+
     #titulo{
         width: 100vw;
-        height: 53px;
-        padding: 1rem;
+        height: 50px;
     }
 
     .item{
@@ -171,24 +164,15 @@ a{
         position: relative;
         left: 32vh;
     }
-
+    
     .sesion{
         border: none;
         left: 0vh;
     }
-    
+
     .texto{
         font-size: medium;
-        line-height: 22px;
-        letter-spacing: 1px;
         width: auto;
-    }
-
-    .texto2{
-        font-size: medium;
-        width: auto;
-        line-height: 22px;
-        letter-spacing: 1px;
     }
 
     .imagen{
@@ -201,6 +185,18 @@ a{
 
     .imagen3{
     display: none;
+    }
+
+    .imagen4{
+        display: none;
+    }
+
+    .imagen5{
+        display: none;
+    }
+
+    .imagen6{
+        display: none;
     }
     
     .contenido2{
@@ -220,10 +216,6 @@ a{
 }
 
 @media(max-width:960px){
-    body{
-        height: 100vh;
-    }
-    
     .logo{
         width: 7vw;
         height: 6vh;
@@ -231,16 +223,11 @@ a{
 
     .texto{
     font-size: medium;
-    line-height: 16px;
-    }
-    
-    .sesion{
-        left: 2.4vh;
+    letter-spacing: 1px;
     }
 
-    .texto2{
-    font-size: medium;
-    width: auto;
+    .sesion{
+        left: 2.4vh;
     }
 
     .imagen2{
@@ -248,31 +235,30 @@ a{
     }
 
     .imagen3{
+    display: none;
+    }
+
+    .imagen4{
         display: none;
     }
 
-    .video{
-        height: 100vw;
+    .imagen5{
+        display: none;
+    }
+
+    .imagen6{
+        display: none;
     }
 
     .buscar{
         top: 7rem;
     }
 
-    
 }
 
 @media(max-width:1328px){
     .texto{
         font-size: medium;
-    }
-
-    .texto2{
-        width: auto;
-    }
-
-    .imagen2{
-        display: none;
     }
 
     .video{
