--- a/Proyecto/Css/redstone.css
+++ b/Proyecto/Css/redstone.css
@@ -2,7 +2,7 @@
     font-family: 'minecraft';
     font-style: normal;
     font-weight: normal;
-    src: url("./fuente/Minecrafter.Reg.ttf") format('truetype');
+    src: url("/Proyecto/fuente/Minecrafter.Reg.ttf") format('truetype');
     }
 
 *{
@@ -12,7 +12,7 @@
 }
 
 body{
-    background-image: url(./imagenes/minecraft.jpeg);
+    background-image: url(/Proyecto/imagenes/minecraft.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -42,8 +42,8 @@ body{
 .sesion{
     position: relative;
     left: 10vh;
-    padding: 10px;
     border: 2px solid;
+    padding: 10px;
 }
 
 #navegacion{
@@ -69,7 +69,7 @@ a{
 
 .tienda{
     position: relative;
-    right: 13vh;
+    right: 12vh;
     padding: 10px;
     border: 2px solid;
 }
@@ -122,15 +122,6 @@ a{
     width: 16vw;
 }
 
-.buscar{
-    display: flex;
-    justify-content: right;
-    float: right;
-    position: absolute;
-    font-family: 'minecraft';
-    
-}
-
 .texto{
     display: flex;
     justify-content: center;
@@ -141,6 +132,14 @@ a{
     text-align: center;
 }
 
+.buscar{
+    display: flex;
+    justify-content: right;
+    float: right;
+    position: absolute;
+    font-family: 'minecraft';
+    
+}
 
 
 @media (max-width:480px){
@@ -165,15 +164,15 @@ a{
         position: relative;
         left: 32vh;
     }
-
-    .sesion{
-        border: none;
-        left: 0vh;
-    }
     
     .texto{
         font-size: medium;
         width: auto;
+    }
+
+    .sesion{
+        border: none;
+        left: 0vh;
     }
 
     .imagen{
@@ -222,13 +221,15 @@ a{
         height: 6vh;
     }
 
-    .sesion{
-        left: 2.4vh;
-    }
+    
 
     .texto{
     font-size: medium;
     letter-spacing: 1px;
+    }
+
+    .sesion{
+        left: 2.4vh;
     }
 
     .imagen2{
